# NebulaTelegramBot

./: .funcignore  .gitignore  Dockerfile  README.md  additional_functions.py  deploy-function-resources.ps1  deploy-function.ps1  docker-compose.yml  function_app.py  pyproject.toml  requirements.txt
commands/: command_registry.py  start_command.py
message_processing/: audio_processor.py  transcription_processor.py
services/: openai_service.py
src/agents/: audio_agent.py  cost_tracker.py  prompt_utils.py  prompts.yaml
src/commands/: command_registry.py  start_command.py
src/db/: users.py  users_db.py
src/message_processing/: audio_processor.py  message_handler.py  transcription_processor.py  transcriptions.py
src/services/: llm_service.py  mongodb_service.py  openai_service.py  storage_service.py  telegram_service.py
