[project]
name = "telegram-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.12",
    "asyncio>=3.4.3",
    "azure-data-tables>=12.6.0",
    "azure-functions>=1.21.3",
    "azure-identity>=1.20.0",
    "azure-storage-blob>=12.24.1",
    "azure-storage-queue>=12.12.0",
    "backoff==2.2.1",
    "openai==1.59.3",
    "pydub==0.25.1",
    "pymongo[srv]>=4.11.1",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "python-telegram-bot==21.7",
]
