[project]
name = "nebula-telegram-bot"
version = "0.1.0"
description = "Nebula Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.12",
    "asyncio>=3.4.3",
    "azure-common>=1.1.28",
    "azure-cosmos>=4.9.0",
    "azure-functions>=1.21.3",
    "azure-identity>=1.20.0",
    "azure-storage-blob>=12.24.1",
    "azure-storage-queue>=12.12.0",
    "backoff==2.2.1",
    "langchain>=0.3.19",
    "langchain-core>=0.3.40",
    "langchain-openai>=0.3.7",
    "langgraph>=0.3.2",
    "markdown2>=2.5.3",
    "openai==1.59.3",
    "pydub==0.25.1",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "python-telegram-bot==21.7",
]
